configuration of sending email with mailtrap integration with nodemailer

--- a/server/.env-sample
+++ b/server/.env-sample
@@ -1,1 +1,5 @@
 DATABASE_URL="file:./dev.db"
+
+#SMTP Settings
+USER_NODEMAILER="your_generated_userid_in_mailtrap_installed_with_nodemailer"
+PASS_NODEMAILER="your_generated_pass_in_mailtrap_installed_with_nodemailer"
