--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
